# furaibo-sdk

./: .gitignore  CMakeLists.txt
src/: test_prog.c  test_prog.h
src/furaibo/: common.h  printf.h  swd.h  ui.h
